--- a/v2.0/.tmux.conf
+++ b/v2.0/.tmux.conf
@@ -7,7 +7,7 @@ set -g display-time 5000
 # tmux 2.2 has remove below option
 # set -g status-utf8 on                       # Enable utf-8
 set -g history-limit 100000                 # Scrollback buffer n lines
-# set -g mouse on                             # Enable mouse (>=2.1)
+ set -g mouse on                             # Enable mouse (>=2.1)
 setw -g mode-keys vi
 set-option -g status-position top           # Status bar, default bottom
 
@@ -140,7 +140,7 @@ set -g default-terminal "screen-256color"
 
 # The modes
 setw -g clock-mode-colour colour135
-setw -g mode-attr bold
+#setw -g mode-attr normal
 setw -g mode-fg colour196
 setw -g mode-bg colour238
 
@@ -148,7 +148,7 @@ setw -g mode-bg colour238
 set -g pane-border-bg colour235
 set -g pane-border-fg colour238
 set -g pane-active-border-bg colour236
-set -g pane-active-border-fg red
+set -g pane-active-border-fg blue
 
 # The statusbar
 set -g status-position bottom
