--- a/v2.0/.gitconfig
+++ b/v2.0/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Tanky Woo
-	email = wtq1990@gmail.com
+	name = fupeng.li
+	email = fupeng.li@ihandysoft.com
 [push]
 	; for git 1.8
 	default = simple
