change name of fupeng.li

--- a/v2.0/.gitconfig
+++ b/v2.0/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = fupeng.li
-	email = fupeng.li@ihandysoft.com
+	name = erhua.li
+	email = cdqn10086@126.com
 [push]
 	; for git 1.8
 	default = simple
