--- a/v2.0/.tmux.conf
+++ b/v2.0/.tmux.conf
@@ -27,6 +27,11 @@ set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
+# start selecting text typing 'v' key (once you are in copy mode)
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+# copy selected text to the system's clipboard
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
 # Key bindings for horizontal and vertical panes
 unbind %
 bind | split-window -h
@@ -54,7 +59,7 @@ setw -g automatic-rename off
 bind r source-file ~/.tmux.conf
 
 # Bind to create a specify layout in current window
-bind T source-file ~/.dotfiles/tanky
+bind T source-file ~/.dotfiles/fupeng
 
 # # Pane settings
 # set -g status-left-length 90
