--- a/v2.0/.screenrc
+++ b/v2.0/.screenrc
@@ -19,6 +19,6 @@ hardstatus alwayslastline
 hardstatus string "%{= br}%{g}[%{G}$USER@%H%{g}]%{w}%1`%{g}[%=%{=kw}%{w}%-w%{Y}[%{W}%n-%t%{Y}]%{w}%+w%=%{g}][%l][%{w}%Y-%m-%d %{Y}%c%{g}]"
 
 # screen windows
-screen -t tankykwoo   0
-screen -t ops-dev     1
+screen -t fupeng.li   0
+screen -t dev-ops     1
 select                0
