--- a/v2.0/.gitconfig
+++ b/v2.0/.gitconfig
@@ -6,7 +6,7 @@
 	default = simple
 [core]
 	editor = vim
-	excludesfile = /home/tankywoo/.gitignore
+	excludesfile = /home/fplee/.gitignore
 	quotepath = false
 	pager = less -RS
 [diff]
