--- a/v2.0/.tmux.conf
+++ b/v2.0/.tmux.conf
@@ -71,22 +71,24 @@ bind T source-file ~/.dotfiles/fupeng
 # set -g window-status-current-format ' #I #W '
 # 
 # # https://github.com/seebi/tmux-colors-solarized
+set -g status-bg black
+set -g status-fg white
 # #### COLOUR (Solarized 256)
 # 
 # # default statusbar colors
-# set-option -g status-bg blue
-# set-option -g status-fg white
-# set-option -g status-attr default
+#set-option -g status-bg blue
+#set-option -g status-fg white
+#set-option -g status-attr default
 # 
 # # default window title colors
-# set-window-option -g window-status-fg colour253
-# set-window-option -g window-status-bg default
-# set-window-option -g window-status-attr dim
+#set-window-option -g window-status-fg colour253
+#set-window-option -g window-status-bg blue
+#set-window-option -g window-status-attr dim
 # 
 # # active window title colors
-# set-window-option -g window-status-current-fg white
-# set-window-option -g window-status-current-bg cyan
-# set-window-option -g window-status-current-attr bright
+#set-window-option -g window-status-current-fg white
+#set-window-option -g window-status-current-bg cyan
+#set-window-option -g window-status-current-attr bright
 # 
 # # pane border
 # set-option -g pane-border-fg green
@@ -113,26 +115,21 @@ set -g status-fg colour12
 set -g status-interval 2
 
 # messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
+set -g message-style fg=black,bg=yellow
+set -g message-command-style fg=blue,bg=yellow
+
 
 #window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
+setw -g mode-style bg=colour6,fg=colour0
 
 # window status
 setw -g window-status-format " #F#I:#W#F "
 setw -g window-status-current-format " #F#I:#W#F "
 setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
 setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
+setw -g window-status-current-style bg=colour0,fg=colour11,dim
+setw -g window-status-style bg=green,fg=black,reverse
+
 
 # loud or quiet?
 set-option -g visual-activity off
@@ -145,36 +142,33 @@ set -g default-terminal "screen-256color"
 
 # The modes
 setw -g clock-mode-colour colour135
-#setw -g mode-attr normal
-setw -g mode-fg colour196
-setw -g mode-bg colour238
+setw -g mode-style bg=colour238,fg=colour196,bold
 
 # The panes
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg blue
+set -g pane-border-style bg=colour235,fg=colour238
+set -g pane-active-border-style bg=colour236,fg=colour251
+
 
 # The statusbar
 set -g status-position bottom
 set -g status-bg colour034
 set -g status-fg colour137
-set -g status-attr dim
+set -g status-style dim
 set -g status-left '#[fg=colour233,bg=colour241,bold] @#(whoami) #[fg=colour233,bg=colour245,bold] [#h] '
 set -g status-right '#{?pane_synchronized, #[fg=white]#[bg=blue] sync ,}#[fg=colour233,bg=colour241,bold] %Y-%m-%d #[fg=colour233,bg=colour245,bold] %H:%M '
 set -g status-right-length 50
 set -g status-left-length 50
 
-setw -g window-status-current-fg blue
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
+setw -g window-status-current-style bg=colour238,fg=colour81,bold
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=red]#F '
 
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
+setw -g window-status-style bg=colour235,fg=colour138,none
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+setw -g window-status-bell-style bg=colour1,fg=colour255,bold
+
+set -g mode-style bg=red,fg=green,blink
+
+# The messages 
+set -g message-style bg=colour166,fg=colour232,bold
+
